<resources>
    <string name="app_name">Candy \nReception</string>
    <string name="action_inicio">Inicio</string>
    <string name="action_reservaciones">Reservaciones</string>
    <string name="action_promociones">Promociones</string>
    <string name="action_nosotros">Nosotros</string>
    <string name="action_contacto">Contacto</string>
    <string name="action_salir">Salir</string>

    <string name="select_date">Selecciona la fecha para el día de tu evento:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_salon">Contamos con amplias instalaciones,\n grandes paquetes y
        promociones\n para armar tu fiesta en grande\n y el mejor servicio.</string>
    <string name="description_loza">Cada elemento que elijas se te proporcionará en base a la
        cantidad de mesas que hayas seleccionado previamente</string>
    <string name="nosotros">Nuestro salón de eventos ofrece una gran variedad de servicios,
        cómodas instalaciones y el mejor trato.\n\nEstá diseñado para pasar un gran día al lado
        de nuestros seres queridos y celebrar esa ocasión especial.</string>
    <string name="ubicacion">Estamos ubicados en la calle Liverpool #91 Colonia Juárez, CDMX. C.P.
        06600 a un costado del estacinamiento "Juárez". \n\nNuestros medios de contacto son:
        \n\nTeléfono (móvil): 044-775-145-05-78 \n\nEmail: candy_Reception@gmail.com
        \n\nNuestra página oficial: www.candyReception.com</string>

    <string name="hacer_pedido">Pedir mesas y accesorios</string>
    <string name="apartar_salon">Apartar Salón</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>

    <string name="alert1">La fecha se encuentra disponible</string>
    <string name="alert2">El salón ha sido apartado con éxito</string>

    <string-array name="colores">
        <item>Rojo</item>
        <item>Amarillo</item>
        <item>Morado</item>
        <item>Negro</item>
        <item>Café</item>
        <item>Plateado</item>
        <item>Dorado</item>
        <item>Nude</item>
        <item>Rosa</item>
        <item>Azul Marino</item>
        <item>Azul Celeste</item>
        <item>Verde</item>
        <item>Anaranjado</item>
        <item>Vino</item>
    </string-array>
</resources>
