<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".controller.MainActivity">
    <item
        android:id="@+id/action_inicio"
        android:orderInCategory="100"
        android:title="@string/action_inicio"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reservaciones"
        android:orderInCategory="100"
        android:title="@string/action_reservaciones"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_promociones"
        android:orderInCategory="100"
        android:title="@string/action_promociones"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_contacto"
        android:orderInCategory="100"
        android:title="@string/action_contacto"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_salir"
        android:orderInCategory="100"
        android:title="@string/action_salir"
        app:showAsAction="never" />
</menu>
